# Pulsur

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE_0_26_AUDIT.md  README.md  RELEASING.md  build_v7.txt  cert.pem  clippy.toml  errors.txt  key.pem  out.txt  package-lock.json  package.json  pulsur-js-sdk-0.6.0.tgz  rustfmt.toml  test-server.js  test.json  test_integration_out.txt  test_integration_out_v2.txt  test_out.txt  test_output.txt  test_output_ph19.txt  test_results.txt  test_v2.txt  test_v3.txt
.agents/rules/: instructions.md
.agents/workflows/: instruction.md  phase.txt
.config/: .release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  commitlint.yml  release-please.yml  release.yml
audits/: REPORT.txt
benchmarks/: fastify_http.js  fastify_results.json  node_http.js  node_results.json  node_results_fresh.json  pulsur_results_fresh.json  report.js  rust_results.json
crates/circuit-breaker/: Cargo.toml
crates/core/gateway/: Cargo.toml  gateway.yaml
crates/core/gateway/src/: auth.rs  lib.rs  main.rs
crates/core/pulsar-cli/src/: main.rs
crates/core/pulsar-server/: Cargo.toml
crates/core/pulsar-server/src/: config.rs  handlers.rs  lib.rs  main.rs
crates/engine/circuit-breaker/: Cargo.toml
crates/engine/circuit-breaker/src/: lib.rs
crates/engine/http-server/: Cargo.toml  build.rs
crates/engine/http-server/examples/: benchmark.rs
crates/engine/http-server/src/: lib.rs  main.rs
crates/engine/http-server/tests/: benchmark.rs
crates/engine/load-balancer/: BENCHMARKS.md  Cargo.toml  test_output.txt
crates/engine/load-balancer/src/: lib.rs
crates/engine/proxy/src/: lib.rs
crates/engine/queue/: Cargo.toml
crates/engine/queue/src/: lib.rs
crates/engine/rate-limiter/: Cargo.toml
crates/engine/rate-limiter/proptest-regressions/: lib.txt
crates/engine/rate-limiter/src/: lib.rs
crates/fundamentals/: Cargo.toml
crates/fundamentals/src/: echo_server.rs  hash_map.rs  lib.rs  linked_list.rs  thread_pool.rs
crates/gateway/: Cargo.toml  log.txt
crates/gateway/src/: auth.rs  lib.rs  main.rs
crates/http-server/: Cargo.toml
crates/http-server/examples/: benchmark.rs
crates/http-server/src/: lib.rs  main.rs
crates/http-server/tests/: benchmark.rs
crates/load-balancer/: Cargo.toml  check_output.txt
crates/load-balancer/src/: lib.rs
crates/load-balancer/tests/: integration.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/proxy/: Cargo.toml
crates/pulsar-cli/: Cargo.toml
crates/pulsar-cli/src/: main.rs
crates/pulsar-server/: Cargo.toml
crates/pulsar-server/src/: handlers.rs  main.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/rate-limiter/: Cargo.toml
crates/rate-limiter/src/: lib.rs
crates/shared/fundamentals/src/: echo_server.rs  hash_map.rs  lib.rs  linked_list.rs  stack.rs  thread_pool.rs
crates/shared/observability/src/: lib.rs
crates/tokio-deep-dive/: Cargo.toml  README.md
crates/tokio-deep-dive/src/: main.rs
docs/: BENCHMARKS.md  CHANGELOG.md  RELEASING.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: benchmarks.md  getting-started.md  intro.md
docs/docs/api/: gateway-config.md  http-server-package.md  js-sdk.md
docs/docs/architecture/: components.md  ffi-bridge.md  overview.md  wal-format.md
docs/docs/architecture/adr/: 0001-rust-over-go.md  0002-napi-bridge.md
docs/docs/guides/: coming-from-express.md  troubleshooting.md
docs/examples/: getting-started.js  queue-worker.js  rate-limiter.js  verify-examples.js
docs/legal/: CODE_OF_CONDUCT.md  SECURITY.md
docs/src/css/: custom.css
docs/src/pages/: index.js
examples/: gateway.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: http_parser.rs  wal_parser.rs
infra/: docker-compose.baseline.yml  docker-compose.pulsur.yml
internal/results/: phase-59-soak-node.json
playground/tokio-deep-dive/src/: main.rs
results/: phase-56-baseline.json  phase-57-pulsur-http.json  phase-58-pulsur-full.json  phase-59-soak-pulsur.json  phase-59-spike-node.json  phase-59-spike-pulsur.json  phase-61-pulsur-optimized.json
results/baseline/: summary.md
scripts/: bench-baseline.js  run_benchmarks.ps1  stage-npm-binary.js
test-app/: Dockerfile.node  server.js
tests/: Cargo.toml  Dockerfile.ferrum  docker-compose.yml  package-lock.json  package.json
tests/backend/: Dockerfile  index.js
tests/gateway/: gateway.yaml
tests/integration/: integration.test.ts  package.json
tests/load/: baseline_load.json  gateway.yaml  load-test.js
tests/src/: main.rs
tests/tests/: chaos_tests.rs
