[workspace]
resolver = "2"

members = [
    "crates/pulsar-server",
    "crates/http-server",
    "crates/gateway",
    "crates/load-balancer",
    "crates/rate-limiter",
    "crates/queue",
    "crates/circuit-breaker",
    "crates/proxy",
    "crates/observability", "crates/fundamentals", "crates/tokio-deep-dive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pulsar Maintainers"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pulsar/pulsar"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Observability (Logging and Metrics)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"

# Network & HTTP
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
http = "1.1"

# Environment Variables
dotenvy = "0.15"

# Utils
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"


