[workspace]
resolver = "2"

members = [
    # 核心服务 (Core Services)
    "crates/core/pulsar-cli",
    "crates/core/pulsar-server",
    "crates/core/gateway",

    # 基础引擎 (Engine/Middleware)
    "crates/engine/http-server",
    "crates/engine/load-balancer",
    "crates/engine/rate-limiter",
    "crates/engine/queue",
    "crates/engine/circuit-breaker",
    "crates/engine/proxy",

    # 公用组件 (Shared/Utils)
    "crates/shared/fundamentals",
    "crates/shared/observability",

    # 实验性环境 (Playground & Tests)
    "playground/tokio-deep-dive",
    "tests",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["pulsar Maintainers"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dhanushkumar-amk/Pulsur"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"
sha1 = "0.10"
base64 = "0.22"
rustls-pemfile = "2.1"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }

# Observability (Logging and Metrics)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"

# Network & HTTP
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
http = "1.1"

# Environment Variables
dotenvy = "0.15"

# Utils
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
jsonwebtoken = "9.3"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
