[package]
name = "ferrum-fuzz"
version = "0.0.0"
authors = ["pulsar Maintainers"]
publish = false
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4"
http-server = { path = "../crates/http-server" }
queue = { path = "../crates/queue" }
uuid = "1.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }

[[bin]]
name = "http_parser"
path = "fuzz_targets/http_parser.rs"
test = false
doc = false

[[bin]]
name = "wal_parser"
path = "fuzz_targets/wal_parser.rs"
test = false
doc = false
