[package]
name = "pulsur-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
gateway = { path = "../crates/gateway" }
load-balancer = { path = "../crates/load-balancer" }
rate-limiter = { path = "../crates/rate-limiter" }
queue = { path = "../crates/queue" }
circuit-breaker = { path = "../crates/circuit-breaker" }
http_server = { path = "../crates/http-server" }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
arc-swap = "1.7"
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
