[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
http_server = { path = "../http-server" }
tokio = { workspace = true, features = ["full"] }
http = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
arc-swap = "1.7"
rate-limiter = { path = "../rate-limiter" }
chrono = { workspace = true }
dashmap = "5.5"


