[package]
name = "load-balancer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "6.1"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http = { workspace = true }
