[package]
name = "observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
async-stream = "0.3"
axum = { workspace = true }
futures-util = "0.3"
metrics = { workspace = true }
metrics-exporter-prometheus = "0.15"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
tower = { workspace = true }
