[package]
name = "pulsar-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
http_server = { path = "../http-server" }
futures = { workspace = true }
