[package]
name = "queue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
bincode = "1.3"
chrono = { workspace = true }
cron = "0.12"
futures-util = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.24"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
tower = { workspace = true }
