[package]
name = "pulsar-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
http_server = { path = "../../engine/http-server" }
gateway = { path = "../gateway" }
load-balancer = { path = "../../engine/load-balancer" }
rate-limiter = { path = "../../engine/rate-limiter" }
futures = { workspace = true }
dotenvy = { workspace = true }

[features]
noop = ["http_server/noop", "gateway/noop", "rate-limiter/noop"]
