[package]
name = "http_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pulsar-http-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
flate2 = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
napi = { version = "2", features = ["async"] }
napi-derive = "2"

[features]
noop = ["napi/noop"]

[[test]]
name = "benchmark"
path = "tests/benchmark.rs"

[build-dependencies]
napi-build = "2"
